refactor: table names are renamed to test version

--- a/todo.yaml
+++ b/todo.yaml
@@ -1,6 +1,27 @@
 google drive:
-  always delete order_main and yesterday files, so just order_main.xlsx and today_{day}.xlsx
+  file: unas_actions.py
+
+  task:
+    [
+      always delete order_main and yesterday files, so just order_main.xlsx and today_{day}.xlsx
+    ]
 
 unas_api:
-  look for limit max 500
-  optimize code for api response order limits
+  file: google_cloud_actions.py
+
+  task:
+    [
+      look for limit max 500
+      optimize code for api response order limits
+    ]
+
+server:
+  task:
+    [
+
+    ]
+
+other:
+  task:
+    [
+    ]
