feat: added popfanatic webshop automation

--- a/todo.yaml
+++ b/todo.yaml
@@ -5,6 +5,7 @@ google drive:
   task:
     [
       always delete order_main and yesterday files, so just order_main.xlsx and today_{day}.xlsx
+      merge big queries into one and make multiple sheets into one excel file
     ]
 
 unas_api:
